# JzRE

./: .clang-format  .clangd  .gitignore  .gitmodules  AGENTS.md  BUILD_GUIDE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  LICENSE  README.md  README_RHI.md  RHI_Example.cpp  build.bat  build.sh  main.cpp  vcpkg.json
examples/EditorExample/: CMakeLists.txt  main.cpp  vcpkg.json
examples/EditorExample/Application/: CMakeLists.txt
examples/EditorExample/Core/: CMakeLists.txt
examples/EditorExample/UI/: CMakeLists.txt
examples/RuntimeExample/: CMakeLists.txt  main.cpp
programs/JzREHeaderTool/: CMakeLists.txt
programs/JzREHeaderTool/source/: main.cpp
programs/JzREShaderTool/: CMakeLists.txt
programs/JzREShaderTool/source/: main.cpp
src/: CMakeLists.txt  CommonTypes.h  JzArrowButton.cpp  JzArrowButton.h  JzAssetBrowser.cpp  JzAssetBrowser.h  JzAssetView.cpp  JzAssetView.h  JzButton.cpp  JzButton.h  JzCamera.cpp  JzCamera.h  JzCameraController.h  JzCanvas.cpp  JzCanvas.h  JzClock.h  JzColumns.h  JzCommandBufferTask.h  JzComponent.h  JzComponentPool.h  JzComponentPool.inl  JzConsole.cpp  JzConsole.h  JzContext.cpp  JzContext.h  JzConverter.cpp  JzConverter.h  JzDataDispatcher.h  JzDataWidget.h  JzDeviceSettings.h  JzEAlignment.h  JzEDevice.h  JzEFile.h  JzEFileDialogType.h  JzEGizmo.h  JzEInput.h  JzEMemory.h  JzEMode.h  JzEPlugin.h  JzEditor.cpp  (+176 more)
src/App/: CMakeLists.txt  JzREHub.cpp  JzREHub.h  JzRenderEngine.cpp  JzRenderEngine.h
src/App/src/: JzREHub.cpp  JzREInstance.cpp  JzRERuntime.cpp  JzRenderEngine.cpp  main.cpp
src/CLI/: CMakeLists.txt
src/CLI/src/: JzCliArgParser.cpp  JzCliCommandRegistry.cpp  JzCliContext.cpp  main.cpp
src/Core/: CMakeLists.txt  JzClock.cpp  JzELog.h  JzInputManager.h  JzLogger.cpp  JzMaterial.h  JzMesh.cpp
src/Core/src/: JzClock.cpp  JzLight.cpp  JzLogger.cpp  JzServiceContainer.cpp
src/ECS/: CMakeLists.txt  JzCameraController.cpp  JzCameraController.h  JzMoveSystem.h  JzRenderSystem.cpp
src/ECS/src/: JzCamera.cpp  JzCameraController.cpp  JzCollisionDetectionSystem.cpp  JzEntityManager.cpp  JzLight.cpp  JzMoveSystem.cpp  JzRenderSystem.cpp  JzSceneGraphSystem.cpp  JzSceneQuerySystem.cpp  JzSceneStreamingSystem.cpp  JzSceneSystem.cpp  JzSpatialPartitionSystem.cpp  JzVisibilitySystem.cpp
src/Editor/: CMakeLists.txt  JzAssetBrowser.cpp  JzCanvas.cpp  JzCanvas.h  JzScene.cpp  JzSceneManager.h  JzSceneView.cpp  JzSceneView.h  JzUIManager.cpp  JzUIManager.h  JzWorld.inl  main.cpp
src/Editor/Core/: CMakeLists.txt
src/Editor/Panels/: CMakeLists.txt
src/Editor/UI/: CMakeLists.txt
src/Editor/src/: JzAssetBrowser.cpp  JzAssetView.cpp  JzCanvas.cpp  JzConsole.cpp  JzContext.cpp  JzDeviceFactory.cpp  JzEditor.cpp  JzFileSystemUtils.cpp  JzGameView.cpp  JzHierarchy.cpp  JzInputManager.cpp  JzMaterialEditor.cpp  JzMenuBar.cpp  JzPathParser.cpp  JzREInstance.cpp  JzRHIFactory.cpp  JzRHIRenderer.cpp  JzRenderTask.cpp  JzRenderThreadContext.cpp  JzRenderThreadPool.cpp  JzResourceUpdateTask.cpp  JzScene.cpp  JzSceneManager.cpp  JzSceneView.cpp  JzUIManager.cpp  JzView.cpp  JzWindow.cpp  JzWorld.cpp  main.cpp
src/EngineContent/Scripts/: spin.lua
src/EngineContent/ShaderSource/: standard.jzshader.src.json
src/EnttECS/: CMakeLists.txt
src/EnttECS/src/: JzEnttWorld.cpp
src/Graphics/: CMakeLists.txt
src/Graphics/OpenGL/: JzOpenGLBuffer.cpp  JzOpenGLBuffer.h  JzOpenGLDevice.cpp  JzOpenGLFramebuffer.cpp  JzOpenGLPipeline.cpp  JzOpenGLPipeline.h  JzOpenGLShader.cpp  JzOpenGLShader.h  JzOpenGLTexture.cpp  JzOpenGLVertexArray.cpp  JzOpenGLVertexArray.h
src/Graphics/Vulkan/: JzVulkanDevice.h  JzVulkanPipeline.h  JzVulkanShader.h  JzVulkanTexture.h  JzVulkanVertexArray.h
src/Platform/: CMakeLists.txt
src/Platform/Linux/: JzFileDialog.cpp  JzMessageBox.cpp  JzOpenFileDialog.cpp  JzSaveFileDialog.cpp
src/Platform/Windows/: JzFileDialog.cpp  JzMessageBox.cpp  JzOpenFileDialog.cpp  JzSaveFileDialog.cpp
src/Platform/include/: JzFileDialog.h
src/Platform/macOS/: JzFileDialog.mm  JzMessageBox.mm  JzOpenFileDialog.cpp  JzSaveFileDialog.cpp
src/RHI/: CMakeLists.txt  JzRHICommandList.cpp  JzRHICommandQueue.h  JzRHIDescription.h  JzRHIETypes.h  JzRHIStats.cpp  JzRHIStats.h  JzRenderTask.h
src/RHI/src/: JzCommandBuffer.cpp  JzRHIBindPipelineCommand.cpp  JzRHIBindTextureCommand.cpp  JzRHIBindVertexArrayCommand.cpp  JzRHIClearCommand.cpp  JzRHICommand.cpp  JzRHICommandList.cpp  JzRHICommandQueue.cpp  JzRHIDrawCommand.cpp  JzRHIDrawIndexedCommand.cpp  JzRHIFactory.cpp  JzRHIImGuiRenderCommand.cpp  JzRHIRenderPassCommand.cpp  JzRHIRenderer.cpp  JzRHISetScissorCommand.cpp  JzRHIStats.cpp  (+3 more)
src/Resource/: CMakeLists.txt  JzFont.h  JzResourceFactory.h  JzShader.cpp
src/Runtime/: CMakeLists.txt
src/UI/: CMakeLists.txt  JzArrowButton.h  JzColumns.h  JzDataDispatcher.h  JzEAlignment.h  JzEPlugin.h  JzIDrawable.h  JzImageButton.h  JzMenuBar.h  JzMenuItem.h  JzText.cpp  JzWidget.h
src/_Platform/: CMakeLists.txt
tests/: CMakeLists.txt  README.md  TestJzClock.cpp  TestJzDefinitions.cpp  TestJzRETypes.cpp  TestJzVector.cpp  main.cpp  test_JzClock.cpp  test_JzDefinitions.cpp  test_JzVector.cpp
tests/CLI/: CMakeLists.txt  TestJzCliArgParser.cpp  TestJzCliCommandRegistry.cpp  TestJzCliIntegration.cpp
tests/Core/: CMakeLists.txt  TestJzClock.cpp  TestJzDelegate.cpp  TestJzFileSystemUtils.cpp  TestJzMatrix.cpp  TestJzPlatformEvent.cpp  TestJzRETypes.cpp  TestJzServiceContainer.cpp  TestJzThreadPool.cpp  TestJzVector.cpp  main.cpp
tests/Function/: CMakeLists.txt  TestJzProjectRenderAPI.cpp  TestJzScriptSystem.cpp  TestJzShaderCooked.cpp  TestJzWorld.cpp  TestJzWorldShutdown.cpp
tests/Platform/: CMakeLists.txt  TestJzRHICommandList.cpp  TestJzShaderParameterCache.cpp
tool/: CMakeLists.txt
tools/: CMakeLists.txt  JzREHeaderTool.cpp  JzREHeaderTool.h  JzREHeaderToolASTConsumer.cpp  JzREHeaderToolASTConsumer.h  JzREHeaderToolASTVisitor.cpp  JzREHeaderToolASTVisitor.h  JzREHeaderToolFrontend.cpp  JzREHeaderToolFrontend.h  JzREHeaderToolOptions.cpp  JzREHeaderToolOptions.h  JzREHeaderToolTypes.h  main.cpp  reflection_tool.py
(+1397 files in other folders)
